[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
lazy_static = "1.4.0"
nom = "6.0"
regex = "1.4"